2005-09-23  John W. Eaton  <jwe@octave.org>

	* utils.cc (Ferrno_list): New function.

	* oct-errno.h, oct-errno.cc.in: New files.
	* Makefile.in: Add them to the appropriate lists.
	(oct-errno.cc): New rule.
	($(OPT_HANDLERS)): Use $(PERL) instead of just perl.

	* utils.cc: Include oct-errno.h.
	(Ferrno): Rename from FERRNO.  Allow errno to be set.  Allow
	lookups of errno codes by name and access to structure containing
	all errno names and codes.

2005-09-19  John W. Eaton  <jwe@octave.org>

	* pt-bp.cc (tree_breakpoint::visit_index_expression):
	Avoid dereferencing invalid pointer.

2005-09-19  David Bateman  <dbateman@free.fr>

	* Makefile.in (OCT_LINK_DEPS): Include UFsparse libraries.

	* DLD_FUNCTIONS/__glpk__.cc (F__glpk__): Replace isinf with
	xisinf. Allow sparse matrices as second argument.

	* syscalls.cc: Typos.
	* sysdep.cc: Typos.

2005-09-16  John W. Eaton  <jwe@octave.org>

	* syscalls.cc (Fwaitpid): Doc fix.  Expect WNOHANG, WUNTRACED,
	WCONTINUED as args instad of int values.
	Return values are now [pid, status, msg] instad of [pid, msg].
	(WIFEXITED, WEXITSTATUS, WIFSIGNALED, WTERMSIG, WCOREDUMP,
	WIFSTOPPED, WSTOPSIG, WIFCONTINUED): New functions.
	(symbols_of_syscalls): DEFCONST WNOHANG, WUNTRACED, and WCONTINUE.

	* oct-procbuf.cc (octave_procbuf::close): Call octave_syscalls::waitpid
	here instead of calling waitpid directly.
	* sighandlers.cc (OCL_REP::wait): Likewise.
	
	* sysdep.h [__MINGW32__]: Don't define waitpid here.

2005-09-15  John W. Eaton  <jwe@octave.org>

	* sysdep.h [__MINGW32__]: Move to definition of waitpid sysdep.h.

	* sysdep.cc, sighandlers.cc: Rename all win32_ symbols to w32.

	* sysdep.cc (w32_set_quiet_shutdown): New function.
	* sysdep.h: Provide decl.
	* sysdep.cc (MINGW_signal_cleanup): Use it.
	* sighandlers.cc (octave_catch_interrupts): Use it.

	* sysdep.h: Provide decl.
	(MINGW_SIGNAL_CLEANUP): New macro.
	(USE_W32_SIGINT): Move definition here.
	* sighandlers.cc: From here.
